Docker上でMySQLコンテナを作成

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -11,3 +11,20 @@ services:
       - /C/Users/kenta/IdeaProjects/spring-boot-docker:/app
     ports:
       - "8080:8080"
+      # for remote debug
+      - "5005:5005"
+
+  dbserver:
+    image: mysql
+    volumes:
+      - ../sql:/docker-entrypoint-initdb.d
+      - mysql-db:/var/lib/mysql
+    environment:
+      MYSQL_DATABASE: mydb
+      MYSQL_USER: sboot
+      MYSQL_PASSWORD: sboot
+      MYSQL_ROOT_PASSWORD: root
+
+volumes:
+  mysql-db:
+    driver: local
