--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '3'
+version: '3.7'
 
 services:
   web:
     build:
       # Dockerfile の app のコピーのために必要なパス指定
-      context: ../
+      context: ./
       # context のパスから見た Dockerfile の場所
       dockerfile: docker/Dockerfile
     volumes:
@@ -13,18 +13,19 @@ services:
       - "8080:8080"
       # for remote debug
       - "5005:5005"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://dbserver:3306/mydb?autoReconnect=true&useSSL=false
+    depends_on:
+      - dbserver
 
   dbserver:
-    image: mysql
+    image: mysql:5.7
+    # 文字化け回避のために文字コードを指定
+    command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
     volumes:
-      - ../sql:/docker-entrypoint-initdb.d
-      - mysql-db:/var/lib/mysql
+      - ./sql:/docker-entrypoint-initdb.d
     environment:
       MYSQL_DATABASE: mydb
-      MYSQL_USER: sboot
-      MYSQL_PASSWORD: sboot
       MYSQL_ROOT_PASSWORD: root
-
-volumes:
-  mysql-db:
-    driver: local
+    ports:
+      - "3306:3306"
