--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@ spring:
   profiles:
     active: localhost
 mybatis:
+  mapper-locations:
+    - classpath*:/mapper/*.xml
   configuration:
     map-underscore-to-camel-case: true
 ---
@@ -10,8 +12,8 @@ spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/mydb
-    username: sboot
-    password: sboot
+    username: root
+    password: root
 
 ---
 spring:
@@ -19,5 +21,5 @@ spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://dbserver/mydb
-    username: sboot
-    password: sboot
+    username: root
+    password: root
