Spring Bootバージョンアップ対応

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   profiles:
     active: localhost
+server:
+  shutdown: graceful
 mybatis:
   mapper-locations:
     - classpath*:/mapper/*.xml
