--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       # context のパスから見た Dockerfile の場所
       dockerfile: docker/Dockerfile
     volumes:
-      - /C/Users/kenta/IdeaProjects/spring-boot-docker:/app
+      - ~/IdeaProjects/spring-boot-docker:/app
     ports:
       - "8080:8080"
       # for remote debug
@@ -20,6 +20,7 @@ services:
 
   dbserver:
     image: mysql:5.7
+    platform: linux/amd64 # M1 Mac対応
     # 文字化け回避のために文字コードを指定
     command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
     volumes:
