--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 spring:
   profiles:
     active: localhost
+  main:
+    web-application-type: servlet
+  threads:
+    virtual:
+      enabled: true
 server:
   shutdown: graceful
 mybatis:
